--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,9 +21,9 @@
 }
 .carousel-control-prev-icon,
     .carousel-control-next-icon {
-      background-color:chartreuse; /* semi-transparent black background */
-      border-radius: 50%; /* rounded shape */
-      padding: 20px; /* spacing around the icon */
+      background-color:chartreuse; 
+      border-radius: 50%; 
+      padding: 20px; 
       width: 40px;
       height: 40px;
       background-size: 100%, 100%;
@@ -31,7 +31,7 @@
       transition: transform 0.3s ease, background-color 0.3s ease;
     }
     
-    /* Hover effects for better interaction */
+    
     .carousel-control-prev-icon:hover,
     .carousel-control-next-icon:hover {
       background-color: red;
